--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
             <version>1.0.2</version>
         </dependency>
 
+        <!-- https://jsonschemavalidator.net/ -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+
 
     </dependencies>
 
